add: status enum in Swagger
